<resources>
    <string name="app_name">SpendTrak</string>
    <string name="title_track">Track</string>
    <string name="title_visualize">Visualize</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="enter_merchant">Enter merchant</string>
    <string name="string00_00">00.00</string>
    <string name="total">Total</string>
    <string name="merchant">Merchant</string>
    <string name="todo">ToDo</string>
    <string name="cancel">Cancel</string>
    <string name="add_note">Add note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="item_action">Item Action</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="confirm_delete_message">Delete this transaction?</string>
    <string name="dialog_edit_notes">Edit Notes</string>
    <string name="dialog_delete_transaction">Delete Transaction</string>
    <string name="add_transaction_with_note">Add with note</string>
    <string name="default_content_description">Default content description</string>
    <string name="search">Search</string>
    <string name="greater_than">Greater than</string>
    <string name="less_than">Less than</string>
    <string name="between">Between</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="search_by">Search By</string>
    <string name="before">Before</string>
    <string name="on_the_day">On the day</string>
    <string name="after">After</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exact">Exact</string>
    <string name="title_activity_animation_test">AnimationTestActivity</string>
</resources>
