<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView android:id="@+id/tv_dialog_edit_notes_title"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:text="@string/edit_note_title"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/et_dialog_note"
        android:layout_below="@id/tv_dialog_edit_notes_title"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MyEditTextStyle"
        android:hint="@string/add_note"
        tools:ignore="Autofill,LabelFor"
        android:inputType="textNoSuggestions" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button android:id="@+id/btn_dialog_edit_notes_negative"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button android:id="@+id/btn_dialog_edit_notes_positive"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>