<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <RadioGroup android:id="@+id/rg_visualize_date_search"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_rg_vertical"
        android:layout_marginBottom="@dimen/margin_rg_vertical"
        android:layout_marginStart="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/rb_before"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before"
            android:textColor="@color/WHITE" />
        <RadioButton
            android:id="@+id/rb_on_the_day"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_the_day"
            android:textColor="@color/WHITE" />
        <RadioButton
            android:id="@+id/rb_between_dates"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/between"
            android:textColor="@color/WHITE" />
        <RadioButton
            android:id="@+id/rb_after"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after"
            android:textColor="@color/WHITE" />
    </RadioGroup>
    <LinearLayout android:id="@+id/ll_date_search_inputs"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/ll_date_search_buttons"
        android:layout_toEndOf="@id/rg_visualize_date_search"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:minWidth="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_date_search_input1"
                android:background="@color/GRAY"
                android:textSize="21sp"
                android:textColor="@color/WHITE"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                tools:ignore="Autofill,LabelFor" />
            <TextView
                android:id="@+id/tv_date_search_input2"
                android:background="@color/GRAY"
                android:layout_marginTop="7dp"
                android:textSize="21sp"
                android:textColor="@color/WHITE"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>
    <LinearLayout android:id="@+id/ll_date_search_buttons"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap">
        <Button android:id="@+id/btn_search_go"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_search_cancel"
            android:layout_marginTop="7dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>