<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/tv_dialog_confirm_delete_message"
        android:layout_marginBottom="13dp"
        android:text="@string/confirm_delete_message"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout android:id="@+id/fl_dialog_confirm_delete_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="13dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height">

        <Button android:id="@+id/btn_dialog_delete_cancel"
            android:text="@string/cancel"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/btn_dialog_delete_confirmed"
            android:layout_alignParentEnd="true"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>



</LinearLayout>