<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.control.SearchControl">

    <FrameLayout android:id="@+id/search_frame"
        android:padding="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/scene_amount_search"/>
    </FrameLayout>
    <View android:id="@+id/div_search_fragment"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark" />
    <LinearLayout android:id="@+id/ll_search_by"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/search_by"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup android:id="@+id/rg_visualize_search_by"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton android:id="@+id/rb_visualize_byamount"
                android:text="@string/amount"
                android:textSize="17sp"
                android:layout_weight="1"
                android:textColor="@color/WHITE"
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton android:id="@+id/rb_visualize_bydate"
                android:text="@string/date"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textColor="@color/WHITE"
                android:button="@null"
                android:drawableEnd="@android:drawable/btn_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>