<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VisualizeFragment">

    <RelativeLayout android:id="@+id/rl_totals"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/tv_total_merchants"
            tools:text="23 Total Merchants"
            android:textSize="23sp"
            android:textColor="@color/baseText"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/tv_total_amount"
            tools:text="$23.23"
            android:textSize="23sp"
            android:textColor="@color/baseText"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <View android:id="@+id/div_visualize_fragment1"
        android:layout_below="@id/rl_totals"
        android:visibility="gone"
        android:layout_height="3dp"
        android:layout_marginStart="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout android:id="@+id/rl_buttons"
        android:layout_below="@id/div_visualize_fragment1"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_total"
            android:text="@string/total"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_merchant"
            android:text="@string/merchant"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_todo"
            android:text="@string/todo"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <View android:id="@+id/div_visualize_fragment2"
        android:layout_below="@id/rl_buttons"
        android:layout_height="3dp"
        android:layout_marginStart="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/div_visualize_fragment2"
        android:id="@+id/rv_visualize"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>