<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TrackFragment">

    <RelativeLayout android:id="@+id/rl_date_time"
        android:visibility="gone"
        android:layout_marginEnd="7dp"
        android:padding="1dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextClock android:id="@+id/textClock"
            android:textSize="21sp"
            android:textColor="@color/baseText"
            tools:text="Time Place"
            android:layout_margin="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="hh:mm:ss a" />

        <TextView android:id="@+id/textView"
            android:textSize="21sp"
            tools:text="Date Place"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <View android:id="@+id/div_track_fragment"
        android:layout_below="@id/rl_date_time"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout android:id="@+id/rl_transaction_entry"
        android:layout_below="@id/div_track_fragment"
        android:layout_marginTop="7dp"
        android:padding="7dp"
        android:background="@color/baseBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/et_track_merchant"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:background="@null"
            android:textColor="@color/baseText"
            android:textColorHint="@color/GRAY"
            android:textSize="21sp"
            android:padding="1dp"
            android:layout_marginStart="7dp"
            android:layout_alignParentStart="true"
            android:layout_width="225dp"
            android:scrollHorizontally="true"
            android:layout_height="wrap_content"
            android:hint="@string/enter_merchant"
            tools:text="Store Name"
            tools:ignore="Autofill,LabelFor" />

        <EditText android:id="@+id/et_track_amount"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:background="@null"
            android:textColor="@color/baseText"
            android:textColorHint="@color/GRAY"
            android:textAlignment="viewEnd"
            android:padding="1dp"
            android:layout_alignParentEnd="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:hint="@string/string00_00"
            tools:text="Amount"
            tools:ignore="Autofill,LabelFor,RelativeOverlap" />

    </RelativeLayout>

    <View android:id="@+id/div_track_fragment2"
        android:layout_below="@id/rl_transaction_entry"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout android:id="@+id/rl_add_buttons"
        android:layout_below="@id/div_track_fragment2"
        android:background="@drawable/shape_button_oval"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/btn_add"
            android:layout_toStartOf="@id/div_add_buttons"
            android:text="@string/add_transaction"
            android:background="@color/transparent"
            android:textColor="@color/baseText"
            android:textSize="17sp"
            android:layout_marginEnd="9dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            tools:ignore="RelativeOverlap" />

        <View android:id="@+id/div_add_buttons"
            android:layout_centerInParent="true"
            android:layout_width="7dp"
            android:layout_height="50dp"
            android:background="@color/baseBlue" />

        <Button android:id="@+id/btn_add_with_note"
            android:layout_toEndOf="@id/div_add_buttons"
            android:background="@color/transparent"
            android:text="@string/add_transaction_with_note"
            android:textColor="@color/baseText"
            android:textSize="17sp"
            android:layout_marginStart="11dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

    </RelativeLayout>

    <View android:id="@+id/div_track_fragment3"
        android:layout_below="@id/rl_add_buttons"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_track"
        android:layout_below="@id/div_track_fragment3"
        android:layout_width="match_parent"
        android:layout_height="500dp" />

</RelativeLayout>